[FIX] hr_recruitment: realign kanban footer items The kanban's footer elements were misaligned vertically.
task-3473010

--- a/addons/hr_recruitment/static/src/scss/hr_job.scss
+++ b/addons/hr_recruitment/static/src/scss/hr_job.scss
@@ -37,14 +37,6 @@
 }
 
 .o_kanban_view {
-    .oe_kanban_card {
-        .o_kanban_state_with_padding {
-            padding-left:7%;
-            padding-bottom:5%;
-            width: 12px;
-        }
-    }
-
     .o_view_sample_data .ribbon {
         display: none;
     }
